# RobotScope

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: deploy-pages.yml
agent/: README.md  package.xml  setup.cfg  setup.py
agent/robotscope_agent/: __init__.py  bridge.py  gateway.py  main.py  profiles.py  protocol.py
docs/: action-gateway.md  api-v0.1.md  architecture.md  command-gateway.md  contributing.md  known-limitations.md  lanelet2-boost-bin.md  lanelet2-osm.md  live-agent.md  plugin-sdk-example.md  plugins.md  rosbag2.md  service-gateway.md
docs/migration/: beta-to-rc.md  rc-to-ga.md  v0.2-alpha-to-beta.md  v0.2-beta-to-ga.md  v0.3-alpha-to-beta.md  v0.3-beta-to-ga.md  v0.4-alpha-to-beta.md  v0.4-beta-to-ga.md  v0.5-alpha-to-beta.md  v0.5-beta-to-ga.md  v0.6-alpha-to-beta.md  v0.6-beta-to-ga.md  v0.7-alpha-to-beta.md  v0.7-beta-to-ga.md  v0.8-alpha-to-beta.md  v0.8-beta-to-ga.md  v0.9-alpha-to-beta.md  v0.9-beta-to-ga.md  v1.0-alpha-to-beta.md  v1.0-beta-to-ga.md  v1.1-alpha-to-beta.md  v1.1-beta-to-ga.md  v1.2-alpha-to-beta.md  v1.2-beta-to-ga.md  v1.3-alpha-to-beta.md  v1.3-beta-to-ga.md  v1.4-alpha-to-beta.md  v1.4-beta-to-ga.md  v1.5-alpha-to-beta.md  v1.5-beta-to-ga.md  v1.6-alpha-to-beta.md  (+2 more)
sample_data/: README.md  fetch-samples.sh
scripts/: capture-readme-hero.mjs  create-rosbag2-demo.mjs  create-tf-demo.mjs  generate-lanelet-boost-fixture.sh  live-agent-demo.mjs  rosbag2-to-mcap.sh  run-ros2-agent.sh  test-lanelet-boost.mjs  validate-plugin-manifests.mjs  write-sidecar.mjs
(+163 files in other folders)
